# middleDesktopDevTestTask

./: .gitignore
PathGeneratorClass/: CMakeLists.txt
PathGeneratorClass/src/: main.cpp  pathMaker.h
QMLButton/: CMakeLists.txt  CustomButton.qml  iconValidator.h  main.cpp  main.qml
QtHttpClient/: CMakeLists.txt
QtHttpClient/httpClient/: CMakeLists.txt
QtHttpClient/httpClient/src/: httpClient.cpp  httpClient.h
QtHttpClient/textStreamHttpClient/: CMakeLists.txt
QtHttpClient/textStreamHttpClient/src/: main.cpp  textStreamHttpClient.cpp  textStreamHttpClient.h
